--- a/scripts/gatkcondaenv.yml.template
+++ b/scripts/gatkcondaenv.yml.template
@@ -55,7 +55,7 @@ dependencies:
 - biopython=1.76
 - pyvcf=0.6.8
 - bioconda::pysam=0.15.3            # using older conda-installed versions may result in libcrypto / openssl bugs
-- pyro-ppl=0.4.1
+- gwerbin::pyro-ppl=0.4.1
 
 # pip installs should be avoided, as pip may not respect the dependencies found by the conda solver
 - pip:
